StudyLab/Content/Site.css
body {
    padding-top: 50px;
    padding-bottom: 20px;
    font-family: "Open Sans", "Muli", Arial, sans-serif;
    background-color: #ddccaa;
    color: #776655;
    margin-top: 30px;
}

a {
    color: #776655;
    font-family: "Lato", "Muli", Arial, sans-serif;
    letter-spacing: 0.2px;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
    font-weight: 500;
    line-height: 1.1;
    color: inherit;
}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

label {
    font-weight: normal;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}

.dropdown-menu {
    text-align: center;
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
    color: #ffffff;
    text-decoration: none;
    background-color: #222;
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
    color: #ffffff;
    text-decoration: none;
    background-color: #e29828;
}

/******************************   NAVBAR   ****************************/

.navbar-default {
    background-color: #e29828;
    border: none;
}

    .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
        color: #ffffff;
        background-color: #f2c279;
        box-shadow: inset 0 -3px 0 #eae7e3;
    }

.navbar-brand {
    font-size: 19px;
}
.navbar-logo {
    background-image: url("/Content/books-icon-sm.png");
    background-repeat: no-repeat;
    background-size: cover;
    float: left;
    width: 30px;
    height: 30px;
    margin-top: 9px;
    margin-right: 7px;
}

.navbar-btn {
    height: 30px;
    margin: 2px;
    width: 80px;
    margin-top: 9px;
    line-height: 1px !important;
    font-family: "Muli", Arial, sans-serif;
    padding: 14px 8px !important;
    background-color: #f2c279 !important;
    border: none !important;
    position: initial;
}

.navbar-btn:hover {
    box-shadow: inset 0 -2px 0 #eae7e3 !important;
}

.navbar-nav > li > .dropdown-menu {
    margin: 0 5px 0 0;
}

@media (max-width: 767px) {
    .navbar-logo {
        margin-left: 17px;
        margin-right: -7px;
    }
    .navbar-right {
        display:flex;
        -ms-align-items: center;
        -o-align-items: center;
        -webkit-align-items: center;
        align-items: center;
        -o-justify-content: center;
        -webkit-justify-content: center;
        justify-content: center;
        display: block;
    }

    p, h1 {
        text-align: center;
    }
}

@media (min-width: 767px) {
.navbar-nav > li > a {
        padding-top: 15px;
        padding-bottom: 15px;
    text-align: center;
    }
}

.navbar-nav {
    font-size: 15px;
    text-align: center;

}

.navbar-right {
    margin-right: 0px;
    text-align: center;

}

.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
    background-color: #f2c279;
    color: #ffffff;
}

.navbar-default .navbar-collapse, .navbar-default .navbar-form {
    border-color: #fff;
    overflow: hidden;
    max-height: 700px;
}

.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
    background-color: #e29828;
}

.navbar-default .navbar-toggle {
    border-color: #fff;
}

@media (max-width: 768px) {
    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
        color: #ffffff;
        background-color: #f2c279;
        box-shadow: inset 0 -3px 0 #eae7e3;
    }
}

/********************************* BUTTON ******************************/

.btn-primary {
    color: #ffffff;
    background-color: #E29828;
    border-color: transparent;
}

    .btn-primary:hover {
        color: #fff;
        background-color: #f2c279;
        border-color: #f2c279;
    }

    .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
        color: #ffffff;
        background-color: #f2c279;
        border-color: #f2c279;
    }

        .btn-primary:active:hover, .btn-primary.active:hover, .open > .dropdown-toggle.btn-primary:hover, .btn-primary:active:focus, .btn-primary.active:focus, .open > .dropdown-toggle.btn-primary:focus, .btn-primary:active.focus, .btn-primary.active.focus, .open > .dropdown-toggle.btn-primary.focus {
            color: #ffffff;
            background-color: #f2c279;
            border-color: #f2c279;
        }

    .btn-primary:focus, .btn-primary.focus {
        color: #ffffff;
        background-color: #f2c279;
        border-color: #f2c279;
    }

.btn-primary:active:hover, .btn-primary.active:hover, .open > .dropdown-toggle.btn-primary:hover, .btn-primary:active:focus, .btn-primary.active:focus, .open > .dropdown-toggle.btn-primary:focus, .btn-primary:active.focus, .btn-primary.active.focus, .open > .dropdown-toggle.btn-primary.focus {
    color: #ffffff;
    background-color: #f2c279;
    border: none;
    outline: none;
}

.btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
    color: #ffffff;
    background-color: #f2c279;
    border: none;
    outline: none;
    box-shadow: none;
}

.modal-footer .btn + .btn {
    outline: none;
}

.btn-default:focus {
    outline: none;
    border: none;
}

.btn-default {
    outline: none;
    border: none;
}

.btn:focus {
    outline: none;
    border: none;
}
/* ... */

